--- a/index/Tpl/Index/part4.html
+++ b/index/Tpl/Index/part4.html
@@ -85,9 +85,9 @@ $(function() {
 				<div class="clear10"></div>
 				<div class="jiangpin">
                     <P>感谢所有参与Windows系统话题征集的朋友，最终获奖名单出炉了！</P>
-                    <P>一等奖：微软限量版鼠标</P>
-                    <P>二等奖：微软特别定制双肩背包</P>
-                    <P>三等奖：微软限量版精美冰箱贴</P>
+                    <P>一等奖：点赞量最多的4个话题的提供者，将获得微软限量版艺术鼠标</P>
+                    <P>二等奖：点赞量排名第5-10名的6个话题的提供者，将获得微软特别定制双肩背包</P>
+                    <P>三等奖：随机抽取150名参与话题征集的网友，送上微软精致冰箱贴</P>
                 </div>
                 <div class="clear15"></div>
                 <div class="eightitle"></div>
