更改兼容性

--- a/index/Tpl/Index/part6.html
+++ b/index/Tpl/Index/part6.html
@@ -125,6 +125,19 @@ $(function() {
                 <div class="clear10"></div>
                 <div class="playbox">
 
+                    <embed
+                            type="application/x-shockwave-flash"
+                            src="http://player.youku.com/player.php/sid/XNDI3MTE1OTg0/v.swf"
+                            id="movie_player"
+                            name="movie_player"
+                            bgcolor="#FFFFFF"
+                            quality="high"
+                            allowfullscreen="true"
+                            flashvars="isShowRelatedVideo=false&showAd=0&show_pre=1&show_next=1&isAutoPlay=true&isDebug=false&UserID=&winType=interior&playMovie=true&MMControl=false&MMout=false&RecordCode=1001,1002,1003,1004,1005,1006,2001,3001,3002,3003,3004,3005,3007,3008,9999"
+                            pluginspage="http://www.macromedia.com/go/getflashplayer" width="435" height="250">
+
+
+                    <!--
                     <object id="FlashID" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="435" height="250">
                         <param name="movie" value="http://player.youku.com/player.php/sid/XNDI3MTE1OTg0/v.swf" />
                         <param name="quality" value="high" />
@@ -149,6 +162,7 @@ $(function() {
                         </object>
                         <!--<![endif]-->
                     </object>
+                    -->
 
 
 
