更新第四阶段页面

--- a/index/Tpl/Index/part6.html
+++ b/index/Tpl/Index/part6.html
@@ -71,7 +71,7 @@ $(function() {
     	<div class="bannerleft"></div>
         <div class="bannerright"></div>
     </div>
-
+    <a name="anchor"></a>
     <div class="huatibox">
     	<div class="ht_top"></div>
         <div class="ht_mid">
@@ -86,38 +86,38 @@ $(function() {
                 <div class="clear10"></div>
                 <ul class="playlist">
                 	<li class="p1">
-                    	<a href="#">
+                    	<a href="__ACTION__#anchor">
                         <img src="__UPLOAD__/img_w1.jpg" />
                         <div>
                         	<img src="__PUBLIC__/Index4/images/playbg1.png" />
-                            <p>精彩话题你看#话题1#</p>
+                            <p>#8不够 多1点# - 苏芩</p>
                         </div>
                         </a>
                     </li>
                     <li class="p2">
-                    	<a href="#">
-                        <img src="__UPLOAD__/img_w1.jpg" />
+                    	<a href="__ACTION__/id/2#anchor">
+                        <img src="__UPLOAD__/img_w2.jpg" />
                         <div>
                         	<img src="__PUBLIC__/Index4/images/playbg1.png" />
-                            <p>精彩话题你看#话题1#</p>
+                            <p>#8不够 多1点# - 暖小团</p>
                         </div>
                         </a>
                     </li>
                     <li class="p3">
-                    	<a href="#">
-                        <img src="__UPLOAD__/img_w1.jpg" />
+                    	<a href="__ACTION__/id/3#anchor">
+                        <img src="__UPLOAD__/img_w3.jpg" />
                         <div>
                         	<img src="__PUBLIC__/Index4/images/playbg1.png" />
-                            <p>精彩话题你看#话题1#</p>
+                            <p>#8不够 多1点# - Mike_D</p>
                         </div>
                         </a>
                     </li>
                     <li class="p4">
-                    	<a href="#">
-                        <img src="__UPLOAD__/img_w1.jpg" />
+                    	<a href="__ACTION__/id/4#anchor">
+                        <img src="__UPLOAD__/img_w4.jpg" />
                         <div>
                         	<img src="__PUBLIC__/Index4/images/playbg1.png" />
-                            <p>精彩话题你看#话题1#</p>
+                            <p>#8不够 多1点# - 张亮</p>
                         </div>
                         </a>
                     </li>
@@ -127,7 +127,7 @@ $(function() {
 
                     <embed
                             type="application/x-shockwave-flash"
-                            src="http://player.youku.com/player.php/sid/XNDI3MTE1OTg0/v.swf"
+                            src="<-{$url}->"
                             id="movie_player"
                             name="movie_player"
                             bgcolor="#FFFFFF"
@@ -164,5 +164,10 @@ $(function() {
         </div>
     </div>
 </div>
+<div style="display: none;">
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5788750'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s13.cnzz.com/stat.php%3Fid%3D5788750' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
+
 </body>
+
 </html>
